<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_color"
    tools:context=".fragments.RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="224dp">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:contentDescription="@string/title_category"
                android:scaleType="centerCrop"
                android:src="@drawable/burger_recipes" />

            <ImageButton
                android:id="@+id/ibtnRecipeFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_favorite_icon_top"
                android:layout_marginEnd="@dimen/dimen_favorite_icon_end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_heart_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvRecipeTitle"
                style="@style/StyleTitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_main"
                android:background="@drawable/shape_title_category"
                android:padding="10dp"
                android:text="@string/recipe_title_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/StyleRecipeSectionTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_main"
            android:layout_marginTop="@dimen/dimen_main"
            android:text="@string/ingredients_string" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_main"
            android:layout_marginTop="@dimen/dimen_ingredients"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPortionsTitle"
                style="@style/StylePortionText16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portion_string" />

            <TextView
                android:id="@+id/tvPortionsCount"
                style="@style/StylePortionText16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_ingredients"
                android:text="1" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/sbPortions"
            style="@style/StyleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dimen_portion_seekbar"
            android:layout_marginTop="@dimen/dimen_ingredients"
            android:max="5"
            android:min="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_main"
            android:layout_marginTop="@dimen/dimen_main"
            android:background="@drawable/shape_recipe"
            android:padding="@dimen/dimen_navigation_button"
            tools:itemCount="5"
            tools:listitem="@layout/item_ingredient" />


        <TextView
            style="@style/StyleRecipeSectionTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_main"
            android:layout_marginTop="@dimen/dimen_main"
            android:text="@string/method_string" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_main"
            android:layout_marginTop="@dimen/dimen_main"
            android:background="@drawable/shape_recipe"
            android:padding="@dimen/dimen_navigation_button"
            tools:itemCount="5"
            tools:listitem="@layout/item_method" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>